# phidata-financial-Agentic-AI

./: .env.example  README.md  financial_agent.py  main.py  playground.py  pyproject.toml  requirementx.txt
